src/tests/testfiles/binary-operators/15.txt
testfiles/binary-operators/15.c:2:5: error: invalid operands to binary '-' (have 'float' and 'char')
5.0 - '5';
^
